# pyChIPProm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
pyChIPProm/: __init__.py  core.py  filter_peaks.py  get_transcript_regulator.py  open.py
